--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
     <div id="grid"></div>
     <div class="players">
       <div class="p1-info">
-          <p class="p1-token">X</p>
+          <p class="p1-token">X: </p>
+          <p class="player1"></p>
           <label for="p1-name" class="p1-name">Player 1:</label>
           <input type="text" id="p1-name" />
       </div>
       <div class="p2-info">
-          <p class="p2-token">O</p>
+          <p class="p2-token">O: </p>
+          <p class="player2"></p>
           <label for="p2-name" class="p2-name">Player 2:</label>
           <input type="text" id="p2-name" />
       </div>
     </div>
     <div class="button-container">
-      <button class="reset"></button>
+        <button id="start">start</button>
+      <button id="reset">reset</button>
     </div>
   </body>
 </html>
