game works in DOM. redesigning css layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <body>
     <div class="title">heck the planet.</div>
     <div id="winner"></div>
-    <!-- <div id="grid"></div> -->
+    <div id="win-modal">
+        <span class="close">&times;</span>
+        <!-- <div id="print-winner"></div>
+        <button id="modal-reset">Play Again?</button> -->
+    </div>
     <div class="players">
       <div class="p1-info">
           <p class="player1">X: </p>
